# CS-Assistant

./: .editorconfig  .gitignore  404.html  README.md  api-examples.html  hashmap.json  index.html  markdown-examples.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vite.config.ts
.github/: Build_devApp.yaml
.github/workflows/: Build_Dev.yaml  Build_devApp.yaml  Build_devApp.yaml.disable  Deploy_Doc.yaml  Dev_build.yaml  Dev_build_all.yaml  Dev_build_app.yaml  Dev_build_app.yaml.disable  Dev_build_doc.yaml  Publish_Dev.yaml  Publish_Release.yaml  Release_Dev.yaml  (+6 more)
Doc/: TODO_list.dio  icon.psd
apps/app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/app/src-tauri/.tauri/: myapp.key  myapp.key.pub
apps/app/src-tauri/capabilities/: default.json  dialog.json  fs.json  http.json  opener.json  process.json  sql.json  updater.json  url.json
apps/app/src-tauri/icons/: icon.icns
apps/app/src-tauri/src/: fs.rs  lib.rs  main.rs
assets/: api-examples.md.C2dkNVjH.js  api-examples.md.C2dkNVjH.lean.js  api-examples.md.CXByCK2B.js  api-examples.md.CXByCK2B.lean.js  app.7Pw6YBm8.js  app.BV0yX0CI.js  app.Dt9ZfRdm.js  app.I_Po6IT0.js  index.md.B0o5bO1v.js  index.md.CO_RV7v7.js  index.md.DGowGCwk.lean.js  markdown-examples.md.B7OeRbI6.js  markdown-examples.md.B7OeRbI6.lean.js  markdown-examples.md.CJ6mjQ2b.js  markdown-examples.md.CJ6mjQ2b.lean.js  style.B_1oAB6A.css  style.D35pELA1.css  style.D5QvsLKo.css  style.KSnbhKPA.css
docs/: CNAME
scripts/: publish.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
(+271 files in other folders)
